<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World!</string>
    <string name="app_name">Touch em All Scorecard</string>
    <string name="user_options">User Options</string>
    <string name="options">Options</string>
    <string name="user_menu">Menu</string>
    <string name="menu">Menu</string>
    <string name="settings">Settings</string>
    <string name="edit_team">Team Options</string>
    <string name="logo">Logo</string>
    <string name="create_user">Create New Profile</string>
    <string name="sign_in">Sign In</string>
    <string name="add_team">Add Team</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="team_name">Team Name</string>
    <string name="continues">Continue</string>
    <string name="email_address">Email Address</string>
	<string name="add_first_team">Add First Team</string>
	<string name="_default">Default</string>
	<string name="baseball">Baseball</string>
	<string name="softball">Softball</string>
	<string name="add_player">Add Player</string>
</resources>