<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/add_player" android:title="@string/add_player" android:showAsAction="always" android:icon="@drawable/ic_action_add" android:titleCondensed="@string/add_player"></item><item
        android:id="@+id/UserPreferences"
        android:title="@string/user_menu"
        android:icon="@drawable/ic_action_overflow"
        android:titleCondensed="@string/menu"
        android:showAsAction="ifRoom|withText">
        <menu>
            <item android:id="@+id/menu_team_options" android:title="@string/edit_team" /><item android:id="@+id/menu_user_options" android:titleCondensed="@string/options" android:title="@string/user_options"/>
            <item android:id="@+id/app_settings" android:title="@string/settings" android:titleCondensed="@string/settings"/>
            
        </menu>
    </item>
    

</menu>