<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/grassColorBackground"
    android:orientation="vertical" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/log_in_activity_logo"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:contentDescription="@string/logo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/lg_touch_em_all" />
        
    </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/sign_in_activity_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:hint="@string/user_name"
                android:ems="10"
                android:inputType="textEmailAddress" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/sign_in_activity_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:hint="@string/password"
                android:ems="10"
                android:inputType="textPassword" />
            
            <CheckBox
                android:id="@+id/sia_cb_remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Remember Me" />
            <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:paddingTop="10dp" >
                
                <Button
	                android:id="@+id/sign_in_activity_new_user"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:layout_gravity="center_horizontal"
	                android:text="@string/create_user" />

	            <Button
	                android:id="@+id/sign_in_activity_signInButton"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:layout_gravity="center_horizontal"
	                android:text="@string/sign_in" />
	            
        	</LinearLayout>
        
        </LinearLayout>


</LinearLayout>